--- a/index.html
+++ b/index.html
@@ -3,18 +3,47 @@
   <head>
     <meta charset="utf-8">
     <title>Excursion</title>
-    <link href="./resources/css/main.css" type="text/css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="./resources/css/main.css" />
   </head>
+
   <body>
-    <header class="container">
-      <div class="row">
-        <h1>Discover hidden places in the world around you</h1>
-      </div>
-      <div class="row">
-        <h3>Download Excursion (Coming soon!)</h3>
-      </div>
-    </header>
+    <div >
+      <h1>Discover hidden places in the world around you</h1>
+    </div>
+    <div >
+      <h3>Download Excursion (Coming soon!)</h3>
+    </div>
+
+    <div class="media">
+      <video autoplay muted loop>
+        <source src="./resources/videos/excursion.mp4" type="video/mp4">
+        Video format is not supported
+      </video>
+    </div>
+
+    <div >
+      <h2>Your personal travel guide</h2>
+      <p>Excursion remembers places you like, and recommends new points of interest around you</p>
+    </div>
+
+    <div class="media">
+      <p>
+        <img src="./resources/images/camp.jpg" />
+      </p>
+      <p>
+        <img src="./resources/images/phone.png" />
+      </p>
+    </div>
+
+    <div >
+      <h1>Coming Soon for iPhone and Android</h1>
+      <h3>Download Excursion (Coming soon!)</h3>
+    </div>
+
+    <footer id="footer">
+      <p>&copy; Excursion</p>
+    </footer>
+
 
   </body>
 </html>
