--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
       <h3>Download Excursion (Coming soon!)</h3>
     </div>
 
-    <div class="media">
-      <video autoplay muted loop>
+    <div id="media">
+      <!--<video autoplay muted loop>
         <source src="./resources/videos/excursion.mp4" type="video/mp4">
         Video format is not supported
+      </video>                                video not playing--> 
+      <video autoplay muted loop>
+        <source type="video/mp4" src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/videos/excursion.mp4" />
       </video>
     </div>
 
@@ -26,7 +29,7 @@
       <p>Excursion remembers places you like, and recommends new points of interest around you</p>
     </div>
 
-    <div class="media">
+    <div >
       <p>
         <img src="./resources/images/camp.jpg" />
       </p>
